# haskell-exercise

./: chapter2.hs  chapter3.hs  chapter4.hs  chapter5.hs  chapter6.hs  curring.hs  fold.hs  highOrder.hs  recursion.hs
ioexercise/: girlfriend.hs  girlfriendCap.txt  todo.hs  todo.txt
learning.hsproj/: .uuid  BinarySearchTree.hs  Chapter2.hs  Chapter3.hs  Chapter4.hs  Chapter5.hs  Chapter6.hs  Curring.hs  Fold.hs  HighOrder.hs  Learning.cabal  Optional.hs  Palindromes.hs  Recursion.hs  TypeClass.hs  TypeClassExercise.hs  _BinarySearchTree.hsplay  _HighOrder.hsplay  _Optional.hsplay  _TypeClass.hsplay  _TypeClassExercise.hsplay
