name: Learning
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-5.9-2
x-last-ide-version: HfM1.2.1
Executable Untitled
  main-is: Optional.hs
  buildable: True
  build-depends:
      base -any,
      containers -any
  other-modules:
      Chapter2
      Palindromes
      Recursion
      Fold
      Chapter6
      BinarySearchTree
      Chapter4
      Chapter3
      Chapter5
      TypeClassExercise
      TypeClass
      Curring
      HighOrder
